--- a/(CP)PoultryHouseProductPriceAdjustment/manifest.json
+++ b/(CP)PoultryHouseProductPriceAdjustment/manifest.json
@@ -5,7 +5,7 @@
   "Description": "Poultry House Product Price Adjustment|禽舍动物产品调整",
   "UniqueID": "LunaGlaze.PoultryHouseProductPriceAdjustment",
   "MinimumApiVersion": "4.1.10",
-  "UpdateKeys": [],
+  "UpdateKeys": ["Nexus:33390"],
   "ContentPackFor": {
     "UniqueID": "Pathoschild.ContentPatcher",
     "MinimumVersion": "1.6.0"
